Opens blank window (Works)

--- a/TronPlease/nbproject/project.properties
+++ b/TronPlease/nbproject/project.properties
@@ -29,11 +29,9 @@ dist.jar=${dist.dir}/TronPlease.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.GameLibrary-src=C:\\Users\\Benjamin\\Documents\\GitHub\\GameLibrary\\src
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.GameLibrary-src}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
