Added TronBike classes among others. Can now draw TronBikes (they are circles on the screen) 	Now need to add some documentation

--- a/TronPlease/nbproject/project.properties
+++ b/TronPlease/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tronplease.TronPlease
+main.class=tronplease.Tron
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
